[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "Apache-2.0"
name = "stscli"
version = "0.1.0"
[dependencies]
clap = "2.11.0"
env_logger = "0.3.4"
log = "0.3.6"
quick-error = "1.1.0"
regex = "0.1.74"
rust-ini = "0.10.0"
rustc-serialize = "0.3"
error-chain = "0.7.2"

[dependencies.rusoto]
features = ["sts"]
git = "https://github.com/cmsd2/rusoto"
rev = "01c2f3b565f5da17ef51c599afe25f725a7ab107"
