[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "Apache-2.0"
name = "stscli"
version = "0.1.0"
categories = ["authentication", "command-line-interface"]
description = "CLI to get temporary session tokens from Amazon's AWS STS Api."
repository = "https://github.com/cmsd2/stscli"
keywords = ["AWS", "STS", "cli", "token", "role"]

[dependencies]
clap = "2.11.0"
env_logger = "0.3.4"
log = "0.3.6"
quick-error = "1.1.0"
regex = "0.1.74"
rust-ini = "0.10.0"
rustc-serialize = "0.3"
error-chain = "0.7.2"

[dependencies.rusoto]
features = ["sts"]
version = "0.24.0"
